--- a/style/style.css
+++ b/style/style.css
@@ -132,12 +132,62 @@
 
 .product-card h3 {
   font-size: 1.375rem;
-  /* margin: 0.5rem 0; */
 }
 .product-card p {
   font-size: 1.375rem;
   font-weight: 700;
 }
+
+
+
+
+
+
+/*  */
+.subscribe-section {
+  background: url("../assets/news-letter-bg.png") center/cover;
+  background-repeat: no-repeat;
+  text-align: center;
+  color: white;
+  height: 533px;
+}
+
+.subscribe-section h2 {
+  font-size: 2.5rem;
+  padding-top: 200px;
+}
+
+.subscribe-box {
+  display: flex;
+  justify-content: center;
+  max-width:830px;
+  margin: 0 auto;
+  height: 50px;
+}
+
+.subscribe-box input {
+  padding: 10px;
+  flex: 1;
+  border: none;
+  font-size: 1rem;
+}
+
+.subscribe-box button {
+  background:#E95A08;
+  border: none;
+  color: white;
+  font-weight: bold;
+  padding: 0 20px;
+  cursor:pointer;
+}
+/*  */
+
+
+
+
+
+
+
 
 
 
@@ -154,4 +204,40 @@
   #nav-hide {
     display: none;
   }
+
+/*  */
+.subscribe-section {
+  /* width: 100%; */
+    height: auto;
+    /* padding-bottom: 60px; */
+  }
+
+  .subscribe-section h2 {
+    font: size 3.12rem;
+    padding-top: 100px;
+  }
+
+  .subscribe-box {
+    flex-direction: row;
+    align-items: center;
+    gap: 0; 
+    padding: 10px;
+    padding-bottom: 60px;
+  }
+
+  .subscribe-box input {
+    flex: 1;
+    font-size: 1rem;
+  }
+
+  .subscribe-box button {
+    padding: 10px 16px;
+    font-size: 1rem;
+    white-space: nowrap;
+  } 
+
+/*  */
+
+
+
 }
