--- a/style/style.css
+++ b/style/style.css
@@ -36,6 +36,9 @@
 .color4 {
     color: #E95A08;
 }
+.color5 {
+  color: rgba(107, 114, 128, 1);
+}
 .color-black {
     color: #000000;
 }
@@ -214,8 +217,39 @@
 }
 
 
+/* footer related styles */
+
+.footer {
+  margin: 0 auto;
+  align-items: center;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 50px 160px;
+  background: #FFFFFF;
+}
+
+.footer-links {
+  margin-bottom: 20px;
+}
+
+.footer-left p {
+  width: 360px;
+  font-size: 1.375rem;
+}
+
+.footer-links {
+  display: flex;
+  gap: 110px;
+}
 
 
+.social-icons {
+ display: flex;
+ gap: 20px;
+ align-items: center;
+ margin-bottom: 160px;
+}
 
 
 
@@ -299,5 +333,33 @@
   .badge {
     display: none;
   }
+/*  */
+
+
+
+
+/*  */
+   .footer {
+    flex-direction: column;
+    padding: 0 20px;
+    text-align: left;
+    align-items: start;
+    margin-top: 50px;
+    
+  }
+
+  .footer-left p {
+    font-size: 1rem;
+    text-align: left;
+  }
+  .footer-links {
+    flex-direction: column;
+    gap: 0px;
+    margin-bottom: 0px;
+  }
+
+  .social-icons {
+    margin-bottom: 50px;
+}
 /*  */
 }
