--- a/style/style.css
+++ b/style/style.css
@@ -99,6 +99,100 @@
 }
 
 
+
+
+/* latest deals related styles */
+.deals {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.deals-text {
+  text-align: center;
+}
+.deals-text h2 {
+  font-size: 3.125rem;
+  font-weight: 700;
+}
+.deals-text p {
+  font-size: 1.375rem;
+}
+
+
+
+.latest-deals {
+  display: flex;
+  justify-content: space-between;
+  max-width: 1140px;
+  margin: 0 auto;
+  margin-bottom: 120px;margin-top: 120px;
+
+}
+
+.left-deals {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+}
+
+.left-deals img {
+  width: 367px;
+  border-radius: 14px;
+}
+
+.right-deals img {
+  width: 753px;
+  border-radius: 22px;
+}
+
+.image-container {
+  position: relative;
+}
+.text-overlay {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+}
+.text-overlay h2 {
+  width: 498px;
+  color: #FFFFFF;
+  font-size: 40px;
+  font-weight: 700;
+  margin: 0px;
+  text-align: center;
+}
+
+.text-overlay h3 {
+  width: 270px;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 20px;
+  font-weight: 700;
+  text-align: center;
+}
+
+#left-deals-a-style {
+  font-size: 1rem;
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  align-items: center;
+  text-decoration: underline;
+}
+
+.text-overlay a {
+  font-size: 1.75rem;
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  align-items: center;
+  text-decoration: underline;
+}
+
+
+
 /* our plants related style */
 .our-plants {
   max-width: 1140px;
@@ -171,11 +265,6 @@
   font-size: 1.375rem;
   margin-bottom: 20px;
 }
-
-
-
-
-
 
 
 /* subscribe-section related styles */
@@ -254,9 +343,6 @@
 
 
 
-
-
-
 /* Responsive for Mobile Device */
 @media (max-width: 576px) {
   .hero {
@@ -300,9 +386,32 @@
     white-space: nowrap;
   } 
 
-/*  */
+  .deals {
+    padding: 0 20px;
+  }
+  .deals h2 {
+    font-size: 1.5rem;
+  }
+  .deals p {
+    width: 336px;
+    font-size: 0.875rem;
+  }
+  .latest-deals {
+    flex-direction: column;
+    gap: 20px;
+    margin-top: 50px;
+  }
+  .right-deals img {
+    width: 361px;
+  }
+  .right-deals h2 {
+    font-size: 1.25rem;
+  }
+  .left-deals img {
+    width: 361px;
+  }
 
-/*  */
+
   .flower {
     flex-direction: column; 
     padding: 0 20px;         
@@ -326,19 +435,12 @@
     font-size: 0.875rem;
     text-align: left;
   }
-  /* .flower-title li {
-    font-size: 1rem;
-    text-align: left;       
-  } */
   .badge {
     display: none;
   }
-/*  */
 
 
 
-
-/*  */
    .footer {
     flex-direction: column;
     padding: 0 20px;
@@ -360,6 +462,5 @@
 
   .social-icons {
     margin-bottom: 50px;
-}
-/*  */
-}
+  }
+}  
